--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "registry:build2": "shadcn build",
-    "registry:build": "npm --filter=v4 registry:build && npm lint:fix && npm format:write -- --loglevel silent"
+    "registry:build": "shadcn build",
+    "registry:generate-index": "tsx ./scripts/generate-index.mts && prettier --write \"registry/**/*.{ts,tsx,json,mdx}\" --cache",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,md,mdx}": [
+      "prettier --write"
+    ],
+    "*.{ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@bprogress/next": "^3.2.12",
@@ -36,7 +45,7 @@
     "gray-matter": "^4.0.3",
     "jotai": "^2.15.1",
     "lucide-react": "^0.487.0",
-    "next": "^16.0.1",
+    "next": "^16.0.3",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.3",
     "react": "^19.0.0",
@@ -48,6 +57,7 @@
     "shadcn": "^3.0.0",
     "shiki": "^3.15.0",
     "tailwind-merge": "^3.3.1",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.3.6",
     "vaul": "^1.1.2",
     "zod": "^3.25.76"
@@ -62,6 +72,8 @@
     "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2"
